# fsspec-xrootd

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  genindex.html  index.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  reference.html  search.html  searchindex.js  setup.cfg  setup.py
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml  docs.yml
docs/: conf.py  index.rst
src/fsspec_xrootd/: __init__.py  xrootd.py
tests/: conftest.py  test_basicio.py  test_package.py
